--- a/don.css
+++ b/don.css
@@ -168,7 +168,7 @@ h3{
 
 body{
     width: 100;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)),url(images/love.png);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)),url(love.png);
     background-position: center;
     background-size: cover;
     position: relative;
