--- a/donate.css
+++ b/donate.css
@@ -33,7 +33,7 @@ nav img{
 
 body{
     width: 100;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)),url(images/delivery.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)),url(delivery.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
