--- a/learn.css
+++ b/learn.css
@@ -54,7 +54,7 @@ h3{
 
 body{
     width: 100;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)),url(images/best.webp);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)),url(best.webp);
     background-position: center;
     background-size: cover;
     position: relative;
