--- a/manure.css
+++ b/manure.css
@@ -36,7 +36,7 @@ nav img{
 
 body{
     width: 100;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)),url(images/y6.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)),url(y6.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
